--- a/src/userinterface/loginScreen.fxml
+++ b/src/userinterface/loginScreen.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="loginScreen" prefHeight="239.0" prefWidth="318.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.LoginScreen">
+<AnchorPane id="loginScreen" prefHeight="290.0" prefWidth="395.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.LoginScreen">
    <children>
-      <TextField fx:id="txtFieldUsername" layoutX="85.0" layoutY="67.0" onAction="#login" promptText="Username" />
-      <PasswordField fx:id="passwordFieldPassword" layoutX="85.0" layoutY="120.0" onAction="#login" promptText="Password" />
-      <Button fx:id="btnLogin" layoutX="136.0" layoutY="174.0" mnemonicParsing="false" onAction="#login" text="Login" />
+      <TextField fx:id="txtFieldUsername" layoutX="127.0" layoutY="104.0" onAction="#login" promptText="Username" />
+      <PasswordField fx:id="passwordFieldPassword" layoutX="127.0" layoutY="161.0" onAction="#login" promptText="Password" />
+      <Button fx:id="btnLogin" layoutX="230.0" layoutY="209.0" mnemonicParsing="false" onAction="#login" text="login" />
       <MenuBar layoutY="2.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -26,6 +28,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TextField fx:id="txtFieldError" disable="true" editable="false" layoutY="213.0" prefHeight="25.0" prefWidth="318.0" style="-fx-text-fill: black;" />
+      <TextField fx:id="txtFieldError" disable="true" editable="false" layoutY="257.0" prefHeight="31.0" prefWidth="402.0" style="-fx-text-fill: black;" />
+      <Button layoutX="128.0" layoutY="209.0" mnemonicParsing="false" text="Register" />
    </children>
 </AnchorPane>
