--- a/src/userinterface/mainAppUI.fxml
+++ b/src/userinterface/mainAppUI.fxml
@@ -6,9 +6,38 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="userinterface.MainAppUI"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.MainAppUI">
+   <children>
+      <MenuBar layoutY="2.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <ListView id="listViewProjects" fx:id="listViewProjects" layoutX="14.0" layoutY="47.0" onMouseClicked="#showProjectTasks" prefHeight="306.0" prefWidth="181.0" />
+      <ListView fx:id="listViewTasks" layoutX="206.0" layoutY="47.0" prefHeight="306.0" prefWidth="188.0" />
+      <ListView layoutX="413.0" layoutY="47.0" prefHeight="306.0" prefWidth="173.0" />
+      <Label layoutX="83.0" layoutY="27.0" prefHeight="17.0" prefWidth="52.0" text="Projects" />
+      <Label layoutX="282.0" layoutY="27.0" prefHeight="17.0" prefWidth="36.0" text="Tasks" />
+      <Label layoutX="485.0" layoutY="27.0" text="Users" />
+      <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" text="Add Project" />
+      <Button layoutX="96.0" layoutY="361.0" mnemonicParsing="false" text="Remove Project" />
+      <Button layoutX="206.0" layoutY="361.0" mnemonicParsing="false" text="Add Task" />
+      <Button layoutX="308.0" layoutY="361.0" mnemonicParsing="false" text="Remove Task" />
+      <Button layoutX="413.0" layoutY="361.0" mnemonicParsing="false" text="Add User" />
+      <Button layoutX="500.0" layoutY="361.0" mnemonicParsing="false" text="Remove User" />
+   </children>
 </AnchorPane>
