--- a/src/login/loginScreen.fxml
+++ b/src/login/loginScreen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="loginScreen" prefHeight="336.0" prefWidth="354.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreen">
+<AnchorPane id="loginScreen" prefHeight="336.0" prefWidth="354.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
    <children>
       <TextField fx:id="txtFieldUsername" layoutX="3.0" onAction="#login" prefHeight="50.0" prefWidth="350.0" promptText="Username">
          <font>
