--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -33,11 +33,11 @@
       <Label layoutX="83.0" layoutY="27.0" prefHeight="17.0" prefWidth="52.0" text="Projects" />
       <Label layoutX="282.0" layoutY="27.0" prefHeight="17.0" prefWidth="36.0" text="Tasks" />
       <Label layoutX="485.0" layoutY="27.0" text="Users" />
-      <Button layoutX="14.0" layoutY="361.0" mnemonicParsing="false" text="Add Project" />
+      <Button fx:id="btnAddProject" layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#displayForm" text="Add Project" />
       <Button layoutX="96.0" layoutY="361.0" mnemonicParsing="false" text="Remove Project" />
       <Button layoutX="206.0" layoutY="361.0" mnemonicParsing="false" text="Add Task" />
       <Button layoutX="308.0" layoutY="361.0" mnemonicParsing="false" text="Remove Task" />
-      <Button layoutX="413.0" layoutY="361.0" mnemonicParsing="false" text="Add TableObjects" />
-      <Button layoutX="500.0" layoutY="361.0" mnemonicParsing="false" text="Remove TableObjects" />
+      <Button layoutX="413.0" layoutY="361.0" mnemonicParsing="false" text="Assign User" />
+      <Button layoutX="500.0" layoutY="361.0" mnemonicParsing="false" text="Remove User Assign" />
    </children>
 </AnchorPane>
