--- a/src/main/resources/fxml/makeprojectform.fxml
+++ b/src/main/resources/fxml/makeprojectform.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MakeProjectForm">
    <children>
       <Button fx:id="btnSubmit" layoutX="121.0" layoutY="257.0" mnemonicParsing="false" onAction="#submitForm" prefHeight="87.0" prefWidth="342.0" text="Submit">
          <font>
