--- a/src/main/resources/fxml/makeprojectform.fxml
+++ b/src/main/resources/fxml/makeprojectform.fxml
@@ -5,15 +5,17 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MakeProjectForm">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="359.0" prefWidth="254.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MakeProjectForm">
    <children>
-      <Button fx:id="btnSubmit" layoutX="121.0" layoutY="257.0" mnemonicParsing="false" onAction="#submitForm" prefHeight="87.0" prefWidth="342.0" text="Submit">
+      <TextField fx:id="txtFieldName" prefHeight="44.0" prefWidth="252.0" promptText="Task Name" />
+      <TextArea fx:id="textAreaDesc" layoutX="5.0" layoutY="49.0" prefHeight="246.0" prefWidth="245.0" promptText="Task Description" wrapText="true">
          <font>
-            <Font size="48.0" />
+            <Font size="14.0" />
+         </font></TextArea>
+      <Button fx:id="btnSubmit" layoutY="302.0" mnemonicParsing="false" onAction="#submitForm" prefHeight="52.0" prefWidth="252.0" text="Submit">
+         <font>
+            <Font size="24.0" />
          </font>
       </Button>
-      <TextField fx:id="txtFieldName" layoutX="226.0" layoutY="14.0" promptText="Name" />
-      <TextArea fx:id="textAreaDesc" layoutX="192.0" layoutY="48.0" prefHeight="200.0" prefWidth="200.0" promptText="Desc" />
    </children>
 </AnchorPane>
