--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.control.cell.TextFieldTableCell?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="430.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
    <children>
       <MenuBar layoutY="2.0">
@@ -27,7 +29,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <ListView id="listViewProjects" fx:id="listViewProjects" editable="true" layoutX="12.0" layoutY="49.0" onEditCommit="#changeProjectName" onMouseClicked="#showProjectTasksAndUsers" prefHeight="249.0" prefWidth="218.0" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="454.0" AnchorPane.topAnchor="49.0" />
+      <ListView id="listViewProjects" fx:id="listViewProjects" editable="true" layoutX="12.0" layoutY="49.0" onEditCommit="#changeProjectName" onMouseClicked="#showProjectTasksAndUsers" prefHeight="249.0" prefWidth="218.0" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="454.0" AnchorPane.topAnchor="49.0"/>
       <ListView fx:id="listViewTasks" layoutX="249.0" layoutY="47.0" onMouseClicked="#narrowUsers" prefHeight="249.0" prefWidth="188.0" />
       <ListView fx:id="listViewUsers" layoutX="476.0" layoutY="47.0" prefHeight="306.0" prefWidth="173.0" />
       <Label layoutX="83.0" layoutY="27.0" prefHeight="17.0" prefWidth="52.0" text="Projects" />
