--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -29,8 +29,8 @@
           </Menu>
         </menus>
       </MenuBar>
-      <ListView id="listViewProjects" fx:id="listViewProjects" editable="true" layoutX="12.0" layoutY="49.0" onEditCommit="#changeProjectName" onMouseClicked="#showProjectTasksAndUsers" prefHeight="249.0" prefWidth="218.0" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="454.0" AnchorPane.topAnchor="49.0"/>
-      <ListView fx:id="listViewTasks" editable="true" layoutX="249.0" layoutY="47.0" onEditCommit="#changeTaskName" onMouseClicked="#narrowUsers" prefHeight="249.0" prefWidth="188.0" />
+      <ListView id="listViewProjects" fx:id="listViewProjects" editable="true" layoutX="12.0" layoutY="49.0" onEditCommit="#updateProjectName" userData="projects" onMouseClicked="#showProjectTasksAndUsers" prefHeight="249.0" prefWidth="218.0" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="454.0" AnchorPane.topAnchor="49.0"/>
+      <ListView fx:id="listViewTasks" editable="true" layoutX="249.0" layoutY="47.0" onEditCommit="#updateTaskName" userData="tasks" onMouseClicked="#narrowUsers" prefHeight="249.0" prefWidth="188.0" />
       <ListView fx:id="listViewUsers" editable="true" layoutX="476.0" layoutY="47.0" prefHeight="306.0" prefWidth="173.0" />
       <Label layoutX="83.0" layoutY="27.0" prefHeight="17.0" prefWidth="52.0" text="Projects" />
       <Label layoutX="282.0" layoutY="27.0" prefHeight="17.0" prefWidth="36.0" text="Tasks" />
