--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -35,10 +35,10 @@
       <Label layoutX="83.0" layoutY="27.0" prefHeight="17.0" prefWidth="52.0" text="Projects" />
       <Label layoutX="282.0" layoutY="27.0" prefHeight="17.0" prefWidth="36.0" text="Tasks" />
       <Label layoutX="485.0" layoutY="27.0" text="Users" />
-      <Button id="/fxml/makeProjectForm.fxml" layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#displayForm" text="Create Project" />
+      <Button id = "btnAddProject" userData="/fxml/makeProjectForm.fxml" layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#displayForm" text="Create Project" />
       <Button layoutX="135.0" layoutY="361.0" mnemonicParsing="false" text="Remove Project" />
-      <Button id="/fxml/makeTaskForm.fxml" layoutX="250.0" layoutY="361.0" mnemonicParsing="false" onAction="#displayForm" text="Create Task" />
-      <Button layoutX="351.0" layoutY="361.0" mnemonicParsing="false" text="Remove Task" />
+      <Button fx:id ="btnAddTask" disable="true" userData="/fxml/makeTaskForm.fxml" layoutX="250.0" layoutY="361.0" mnemonicParsing="false" onAction="#displayForm" text="Create Task" />
+      <Button fx:id ="btnRemoveTask"  disable="true" layoutX="351.0" layoutY="361.0" mnemonicParsing="false" text="Remove Task" />
       <Button layoutX="475.0" layoutY="361.0" mnemonicParsing="false" text="Assign User" />
       <Button layoutX="563.0" layoutY="361.0" mnemonicParsing="false" text="Remove User Assign" />
    </children>
