--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import java.awt.event.ComponentEvent?>
 
 <AnchorPane prefHeight="632.0" prefWidth="1000" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
    <children>
@@ -32,7 +34,7 @@
             <TextArea fx:id="txtAreaProjectDesc" disable="true" layoutY="426.0" onKeyPressed="#saveChange" prefHeight="88.0" prefWidth="250.0" promptText="Project Description" wrapText="true" />
             <Button id="btnAddProject" layoutY="527.0" mnemonicParsing="false" onAction="#addProject" text="Create Project" />
             <Button fx:id="btnRemoveProject" layoutX="151.0" layoutY="527.0" mnemonicParsing="false" onAction="#removeProject" text="Remove Project" />
-            <TableView fx:id="tableViewProjects" editable="true" onMouseClicked="#showProjectTasksAndUsers" prefHeight="420.0" prefWidth="250.0">
+            <TableView fx:id="tableViewProjects" editable="true" onMouseEntered="#refreshProjects" prefHeight="420.0" prefWidth="250.0" userData="project">
               <columns>
                 <TableColumn fx:id="columnProjectName" onEditCommit="#updateName" prefWidth="250.0" text="Project Name">
                   <cellValueFactory>
@@ -53,10 +55,16 @@
             <Button fx:id="btnRemoveTask" disable="true" layoutX="134.0" layoutY="102.0" mnemonicParsing="false" onAction="#removeTask" prefHeight="25.0" prefWidth="116.0" text="Remove Task" />
          </children>
       </AnchorPane>
-      <ListView fx:id="listViewUsers" editable="true" layoutX="547.0" layoutY="52.0" prefHeight="397.0" prefWidth="220.0" />
+      <TableView fx:id="tableViewUsers" editable="true" layoutX="547.0" layoutY="29.0" prefHeight="420.0" prefWidth="220.0" userData="users">
+          <columns>
+              <TableColumn prefWidth="220" text="Assigned Users">
+                  <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
+              </TableColumn>
+          </columns>
+      </TableView>
       <Button layoutX="555.0" layoutY="556.0" mnemonicParsing="false" onAction="#assignUser" text="Assign User" />
       <Button layoutX="640.0" layoutY="557.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Remove User Assign" />
-      <TableView fx:id="tableViewTasks" editable="true" layoutX="278.0" layoutY="29.0" onMouseClicked="#narrowUsers" prefHeight="420.0" prefWidth="250.0">
+      <TableView fx:id="tableViewTasks" editable="true" layoutX="278.0" layoutY="29.0" prefHeight="420.0" prefWidth="250.0" userData="tasks">
         <columns>
           <TableColumn fx:id="columnTaskName" onEditCommit="#updateName" prefWidth="200.0" text="Task Name">
                   <cellValueFactory> <PropertyValueFactory property="name" /> </cellValueFactory>
@@ -68,7 +76,7 @@
           </TableColumn>
         </columns>
       </TableView>
-      <TableView fx:id="tableViewAllUsers" layoutX="786.0" layoutY="27.0" prefHeight="420.0" prefWidth="200.0">
+      <TableView fx:id="tableViewAllUsers" layoutX="786.0" layoutY="29.0" prefHeight="420.0" prefWidth="200.0" userData="allUsers">
         <columns>
           <TableColumn prefWidth="200.0" text="All Users">
                   <cellValueFactory> <PropertyValueFactory property="name" /> </cellValueFactory>
@@ -80,4 +88,7 @@
       <Button layoutX="786.0" layoutY="494.0" mnemonicParsing="false" onAction="#search" prefHeight="88.0" prefWidth="99.0" text="Search" />
       <Button layoutX="886.0" layoutY="494.0" mnemonicParsing="false" onAction="#getUsers" prefHeight="88.0" prefWidth="99.0" text="Show Users (May be slow)" textAlignment="CENTER" wrapText="true" />
    </children>
+   <effect>
+      <DropShadow radius="9.940000000000001" spread="0.52" width="20.76" />
+   </effect>
 </AnchorPane>
