--- a/src/main/resources/fxml/loginScreen.fxml
+++ b/src/main/resources/fxml/loginScreen.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="loginScreen" prefHeight="672.0" prefWidth="689.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
+<AnchorPane id="loginScreen" prefHeight="672.0" prefWidth="689.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.LoginScreenUI">
    <children>
       <TextField fx:id="txtFieldUsername" layoutX="259.0" layoutY="183.0" onAction="#login" prefHeight="68.0" prefWidth="402.0">
          <font>
@@ -19,6 +24,34 @@
          <font>
             <Font size="24.0" />
          </font></PasswordField>
+      <AnchorPane id="paneRegister" fx:id="paneRegister" layoutX="-1.0" layoutY="350.0" prefHeight="257.0" prefWidth="689.0" visible="false">
+         <children>
+            <PasswordField fx:id="passwordFieldReType" layoutX="259.0" layoutY="6.0" onAction="#login" prefHeight="74.0" prefWidth="402.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </PasswordField>
+            <Label layoutX="12.0" layoutY="16.0" prefHeight="50.0" prefWidth="243.0" text="Re-Type Password:">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtFieldEmail" layoutX="260.0" layoutY="94.0" prefHeight="68.0" prefWidth="402.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </TextField>
+             <Button fx:id="btnCancelRegistration" layoutX="260.0" layoutY="183.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="45.0" prefWidth="402.0" text="Cancel Registration">
+             <font>
+                 <Font size="20.0" />
+             </font></Button>
+            <Label layoutX="62.0" layoutY="102.0" prefHeight="45.0" prefWidth="164.0" text="Email:">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
       <Button id="btnLogin" fx:id="btnLogin" layoutX="484.0" layoutY="607.0" mnemonicParsing="false" onAction="#login" prefHeight="58.0" prefWidth="191.0" text="Login">
          <font>
             <Font size="24.0" />
@@ -57,33 +90,5 @@
 	            <Image url="http://godiaperfree.com/wp-content/uploads/checkmark-300x300.png" />
 	          </image>
 	        </ImageView>
-      <AnchorPane id="paneRegister" fx:id="paneRegister" layoutX="-1.0" layoutY="350.0" prefHeight="257.0" prefWidth="689.0" visible="false">
-         <children>
-            <PasswordField fx:id="passwordFieldReType" alignment="CENTER_RIGHT" layoutX="259.0" layoutY="6.0" onAction="#login" prefHeight="74.0" prefWidth="402.0">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </PasswordField>
-            <Label layoutX="12.0" layoutY="16.0" prefHeight="50.0" prefWidth="243.0" text="Re-Type Password:">
-               <font>
-                  <Font size="26.0" />
-               </font>
-            </Label>
-            <TextField fx:id="txtFieldEmail" layoutX="260.0" layoutY="94.0" prefHeight="68.0" prefWidth="402.0">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </TextField>
-             <Button fx:id="btnCancelRegistration" layoutX="260.0" layoutY="183.0" mnemonicParsing="false" onAction="#cancelRegistration" prefHeight="45.0" prefWidth="402.0" text="Cancel Registration">
-             <font>
-                 <Font size="20.0" />
-             </font></Button>
-            <Label layoutX="62.0" layoutY="102.0" prefHeight="45.0" prefWidth="164.0" text="Email:">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
    </children>
 </AnchorPane>
