--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import java.awt.event.ComponentEvent?>
 
-<AnchorPane minHeight="632.0" prefWidth="1000" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
+<AnchorPane minHeight="632.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
    <children>
       <MenuBar layoutY="2.0">
         <menus>
@@ -63,15 +63,22 @@
             <Button fx:id="btnRemoveTask" disable="true" layoutX="134.0" layoutY="102.0" mnemonicParsing="false" onAction="#removeTask" prefHeight="25.0" prefWidth="116.0" text="Remove Task" />
          </children>
       </AnchorPane>
-      <TableView fx:id="tableViewUsers" editable="true" layoutX="547.0" layoutY="29.0" prefHeight="420.0" prefWidth="220.0" userData="users">
+      <TableView fx:id="tableViewUsersToProject" editable="true" layoutX="547.0" layoutY="29.0" prefHeight="420.0" prefWidth="110.0" userData="users">
           <columns>
-              <TableColumn prefWidth="220" text="Assigned Users">
+              <TableColumn prefWidth="110.0" text="To Project">
                   <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
               </TableColumn>
           </columns>
       </TableView>
-      <Button layoutX="555.0" layoutY="556.0" mnemonicParsing="false" onAction="#assignUser" text="Assign User" />
-      <Button layoutX="640.0" layoutY="557.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="134.0" text="Remove User Assign" />
+       <TableView fx:id="tableViewUsersToTask" editable="true" layoutX="665.0" layoutY="29.0" prefHeight="420.0" prefWidth="110.0" userData="users">
+           <columns>
+               <TableColumn prefWidth="110.0" text="To Task">
+                   <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
+               </TableColumn>
+           </columns>
+       </TableView>
+      <Button layoutX="556.0" layoutY="480.0" mnemonicParsing="false" onAction="#assignUserToTask" prefHeight="48.0" prefWidth="99.0" text="Assign User to Task" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnRemoveFromTask" layoutX="658.0" layoutY="480.0" mnemonicParsing="false" onAction="#removeUserFromTask" prefHeight="48.0" prefWidth="116.0" text="Remove User From Task" textAlignment="CENTER" wrapText="true" />
       <TableView fx:id="tableViewTasks" editable="true" layoutX="278.0" layoutY="29.0" prefHeight="420.0" prefWidth="250.0" userData="tasks">
         <columns>
           <TableColumn fx:id="columnTaskName" onEditCommit="#updateName" prefWidth="200.0" text="Task Name">
@@ -95,5 +102,12 @@
       <TextField fx:id="txtFieldSearch" layoutX="786.0" layoutY="455.0" onInputMethodTextChanged="#search" prefHeight="25.0" prefWidth="200.0" />
       <Button layoutX="786.0" layoutY="494.0" mnemonicParsing="false" onAction="#search" prefHeight="88.0" prefWidth="99.0" text="Search" />
       <Button layoutX="886.0" layoutY="494.0" mnemonicParsing="false" onAction="#getUsers" prefHeight="88.0" prefWidth="99.0" text="Show Users (May be slow)" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnRemoveFromProject" layoutX="658.0" layoutY="532.0" mnemonicParsing="false" onAction="#removeUserFromProject" prefHeight="48.0" prefWidth="116.0" text="Remove User From Project" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="556.0" layoutY="532.0" mnemonicParsing="false" onAction="#assignUserToProject" prefHeight="48.0" prefWidth="99.0" text="Assign User to Project" textAlignment="CENTER" wrapText="true" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="548.0" layoutY="3.0" prefHeight="25.0" prefWidth="220.0" text="Assigned Users" underline="true">
+         <effect>
+            <ColorAdjust />
+         </effect>
+      </Label>
    </children>
 </AnchorPane>
