--- a/src/main/resources/fxml/mainAppUI.fxml
+++ b/src/main/resources/fxml/mainAppUI.fxml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.control.cell.TextFieldTableCell?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="mainAppID" minHeight="632.0" prefHeight="1000.0" prefWidth="1091.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
+<AnchorPane fx:id="mainAppID" prefHeight="610.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainapp.MainAppUI">
    <children>
+      <AnchorPane fx:id="anchorPaneTasks" layoutX="245.0" layoutY="460.0">
+         <children>
+            <Button fx:id="btnRemoveTask" alignment="CENTER" disable="true" layoutX="115.0" layoutY="100.0" mnemonicParsing="false" onAction="#removeTask" prefHeight="37.0" prefWidth="105.0" text="Remove Task" />
+            <TextArea fx:id="txtAreaTaskDesc" editable="false" prefHeight="88.0" prefWidth="220.0" promptText="Task Description" />
+            <Button fx:id="btnAddTask" alignment="CENTER" layoutY="100.0" mnemonicParsing="false" onAction="#addTask" prefHeight="37.0" prefWidth="105.0" text="Add Task" />
+         </children>
+      </AnchorPane>
       <MenuBar fx:id="Menu" layoutY="2.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -35,12 +33,12 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane fx:id="anchorPaneProjects" layoutX="12.0" layoutY="29.0">
+      <AnchorPane fx:id="anchorPaneProjects" layoutX="12.0" layoutY="29.0" prefWidth="220.0">
          <children>
-            <TextArea fx:id="txtAreaProjectDesc" disable="true" layoutX="14.0" layoutY="506.0" onKeyPressed="#saveChange" prefHeight="88.0" prefWidth="251.0" promptText="Project Description" wrapText="true" />
-            <TableView fx:id="tableViewProjects" editable="true" layoutX="14.0" layoutY="36.0" prefHeight="446.0" prefWidth="251.0" userData="project">
+            <TextArea fx:id="txtAreaProjectDesc" disable="true" layoutY="430.0" onKeyPressed="#saveChange" prefHeight="88.0" prefWidth="220.0" promptText="Project Description" wrapText="true" />
+            <TableView fx:id="tableViewProjects" editable="true" prefHeight="420.0" prefWidth="220.0" userData="project">
               <columns>
-                <TableColumn fx:id="columnProjectName" onEditCommit="#updateName" prefWidth="250.0" text="Project Name">
+                <TableColumn fx:id="columnProjectName" onEditCommit="#updateName" prefWidth="220.0" text="Project Name">
                   <cellValueFactory>
                       <PropertyValueFactory property="name" />
                   </cellValueFactory>
@@ -60,30 +58,25 @@
             </TableView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorPaneTasks" layoutX="278.0" layoutY="455.0">
-         <children>
-            <TextArea fx:id="txtAreaTaskDesc" editable="false" layoutX="40.0" layoutY="81.0" prefHeight="88.0" prefWidth="251.0" promptText="Task Description" />
-         </children>
-      </AnchorPane>
-      <TableView fx:id="tableViewUsersToProject" editable="true" layoutX="547.0" layoutY="29.0" prefHeight="420.0" prefWidth="110.0" userData="users">
+      <TableView fx:id="tableViewUsersToProject" editable="true" layoutX="480.0" layoutY="29.0" prefHeight="420.0" prefWidth="110.0" userData="users">
           <columns>
               <TableColumn prefWidth="110.0" text="To Project">
                   <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
               </TableColumn>
           </columns>
       </TableView>
-       <TableView fx:id="tableViewUsersToTask" editable="true" layoutX="665.0" layoutY="29.0" prefHeight="420.0" prefWidth="110.0" userData="users">
+       <TableView fx:id="tableViewUsersToTask" editable="true" layoutX="600.0" layoutY="29.0" prefHeight="420.0" prefWidth="110.0" userData="users">
            <columns>
                <TableColumn prefWidth="110.0" text="To Task">
                    <cellValueFactory><PropertyValueFactory property="name" /> </cellValueFactory>
                </TableColumn>
            </columns>
        </TableView>
-      <Button layoutX="556.0" layoutY="480.0" mnemonicParsing="false" onAction="#assignUserToTask" prefHeight="48.0" prefWidth="99.0" text="Assign User to Task" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnRemoveFromTask" layoutX="658.0" layoutY="480.0" mnemonicParsing="false" onAction="#removeUserFromTask" prefHeight="48.0" prefWidth="116.0" text="Remove User From Task" textAlignment="CENTER" wrapText="true" />
-      <TableView fx:id="tableViewTasks" editable="true" layoutX="278.0" layoutY="29.0" prefHeight="420.0" prefWidth="250.0" userData="tasks">
+      <Button layoutX="480.0" layoutY="500.0" mnemonicParsing="false" onAction="#assignUserToTask" prefHeight="45.0" prefWidth="110.0" text="Assign User to Task" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnRemoveFromTask" layoutX="600.0" layoutY="500.0" mnemonicParsing="false" onAction="#removeUserFromTask" prefHeight="48.0" prefWidth="110.0" text="Remove User From Task" textAlignment="CENTER" wrapText="true" />
+      <TableView fx:id="tableViewTasks" editable="true" layoutX="245.0" layoutY="29.0" prefHeight="420.0" prefWidth="220.0" userData="tasks">
         <columns>
-          <TableColumn fx:id="columnTaskName" onEditCommit="#updateName" prefWidth="200.0" text="Task Name">
+          <TableColumn fx:id="columnTaskName" onEditCommit="#updateName" prefWidth="175.0" text="Task Name">
                   <cellValueFactory> <PropertyValueFactory property="name" /> </cellValueFactory>
                   <cellFactory> <TextFieldTableCell fx:factory="forTableColumn" /> </cellFactory>
           </TableColumn>
@@ -93,26 +86,20 @@
           </TableColumn>
         </columns>
       </TableView>
-      <TableView fx:id="tableViewAllUsers" layoutX="861.0" layoutY="63.0" prefHeight="446.0" prefWidth="202.0" userData="allUsers">
+      <TableView fx:id="tableViewAllUsers" layoutX="725.0" layoutY="29.0" prefHeight="420.0" prefWidth="220.0" userData="allUsers">
         <columns>
-          <TableColumn prefWidth="200.0" text="All Users">
+          <TableColumn prefWidth="220.0" text="All Users">
                   <cellValueFactory> <PropertyValueFactory property="name" /> </cellValueFactory>
                   <cellFactory><TextFieldTableCell fx:factory="forTableColumn" /> </cellFactory>
           </TableColumn>
         </columns>
       </TableView>
-      <TextField fx:id="txtFieldSearch" layoutX="786.0" layoutY="455.0" onInputMethodTextChanged="#search" prefHeight="25.0" prefWidth="200.0" />
-      <Button layoutX="786.0" layoutY="494.0" mnemonicParsing="false" onAction="#search" prefHeight="88.0" prefWidth="99.0" text="Search" />
-      <Button layoutX="886.0" layoutY="494.0" mnemonicParsing="false" onAction="#getUsers" prefHeight="88.0" prefWidth="99.0" text="Show Users (May be slow)" textAlignment="CENTER" wrapText="true" />
-      <Button fx:id="btnRemoveFromProject" layoutX="658.0" layoutY="532.0" mnemonicParsing="false" onAction="#removeUserFromProject" prefHeight="48.0" prefWidth="116.0" text="Remove User From Project" textAlignment="CENTER" wrapText="true" />
-      <Button layoutX="556.0" layoutY="532.0" mnemonicParsing="false" onAction="#assignUserToProject" prefHeight="48.0" prefWidth="99.0" text="Assign User to Project" textAlignment="CENTER" wrapText="true" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="548.0" layoutY="3.0" prefHeight="25.0" prefWidth="220.0" text="Assigned Users" underline="true">
-         <effect>
-            <ColorAdjust />
-         </effect>
-      </Label>
-      <Button id="btnAddProject" layoutX="32.0" layoutY="652.0" mnemonicParsing="false" onAction="#addProject" prefHeight="37.0" prefWidth="105.0" text="Add Project" />
-      <Button fx:id="btnAddTask" alignment="CENTER_RIGHT" layoutX="318.0" layoutY="652.0" mnemonicParsing="false" onAction="#addTask" text="Add Task" />
-      <Button fx:id="btnRemoveTask" alignment="CENTER" disable="true" layoutX="449.0" layoutY="652.0" mnemonicParsing="false" onAction="#removeTask" prefHeight="37.0" prefWidth="120.0" text="Remove Task" />
+      <TextField fx:id="txtFieldSearch" layoutX="725.0" layoutY="455.0" onInputMethodTextChanged="#search" prefHeight="25.0" prefWidth="220.0" />
+      <Button layoutX="725.0" layoutY="494.0" mnemonicParsing="false" onAction="#search" prefHeight="55.0" prefWidth="99.0" text="Search" />
+      <Button layoutX="840.0" layoutY="494.0" mnemonicParsing="false" onAction="#getUsers" prefHeight="55.0" prefWidth="105.0" text="Show Users (May be slow)" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnRemoveFromProject" layoutX="600.0" layoutY="554.0" mnemonicParsing="false" onAction="#removeUserFromProject" prefHeight="45.0" prefWidth="110.0" text="Remove User From Project" textAlignment="CENTER" wrapText="true" />
+      <Button layoutX="480.0" layoutY="554.0" mnemonicParsing="false" onAction="#assignUserToProject" prefHeight="45.0" prefWidth="110.0" text="Assign User to Project" textAlignment="CENTER" wrapText="true" />
+      <Button id="btnAddProject" layoutX="10.0" layoutY="560.0" mnemonicParsing="false" onAction="#addProject" prefHeight="37.0" prefWidth="105.0" text="Add Project" />
+      <Button id="btnAddProject" fx:id="btnRemoveProject" layoutX="128.0" layoutY="560.0" mnemonicParsing="false" onAction="#removeProject" prefHeight="37.0" prefWidth="105.0" text="Remove Project" />
    </children>
 </AnchorPane>
